stalwart/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  creationTimestamp: '2025-05-14T00:08:55Z'
  generation: 2
  labels:
    app.kubernetes.io/instance: stalwart
    app.kubernetes.io/name: stalwart
    app.kubernetes.io/version: 0.12.1
  name: stalwart
  namespace: stalwart
  resourceVersion: '8853554'
  uid: 75eaf38e-77d2-4841-a431-bd2a5f1153ad
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: stalwart
      app.kubernetes.io/name: stalwart
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        config-hash: 0a02636d3d5e536e3d6d51b2322267391032bd9ef519f8f611e47629168eaf44
        secret-env-hash: e492605ea096fbf6ed4221221ac14cbc51b8fe6b88fb95ba5cb7021cb859fa09
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: stalwart
        app.kubernetes.io/name: stalwart
        app.kubernetes.io/version: 0.11.8
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: stalwart-mail-env
          image: ghcr.io/stalwartlabs/stalwart:latest
          imagePullPolicy: IfNotPresent
            #livenessProbe:
            #  failureThreshold: 3
            #  httpGet:
            #    path: /healthz/live
            #    port: http
            #    scheme: HTTP
            #  periodSeconds: 10
            #  successThreshold: 1
            #  timeoutSeconds: 1
          name: stalwart
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
                #hostPort: 80
            - containerPort: 143
              name: imap
              protocol: TCP
                #hostPort: 143
            - containerPort: 993
              name: imaptls
              protocol: TCP
                #hostPort: 993
            - containerPort: 110
              name: pop3
              protocol: TCP
                #hostPort: 110
            - containerPort: 995
              name: pop3s
              protocol: TCP
                #hostPort: 995
            - containerPort: 14190
              name: sieve
              protocol: TCP
            - containerPort: 25
              name: smtp
              protocol: TCP
                #hostPort: 25
            - containerPort: 587
              name: submission
              protocol: TCP
                #hostPort: 587
            - containerPort: 465
              name: submissions
              protocol: TCP
                #hostPort: 465
                #readinessProbe:
                #  failureThreshold: 3
                #  httpGet:
                #    path: /healthz/ready
                #    port: http
                #    scheme: HTTP
                #  periodSeconds: 10
                #  successThreshold: 1
                #  timeoutSeconds: 1
          resources: {}
          securityContext: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /data/blobs
              name: data
              subPath: blobs
            - mountPath: /data/queue
              name: data
              subPath: queue
            - mountPath: /data/reports
              name: data
              subPath: reports
            - mountPath: /opt/stalwart/etc/config.toml
              name: config
              readOnly: false
              subPath: config.toml
            - mountPath: /opt/stalwart/etc/private/tls.cert
              name: certificate
              readOnly: true
              subPath: tls.cert
            - mountPath: /opt/stalwart/etc/private/tls.key
              name: key
              readOnly: true
              subPath: tls.key
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: stalwart
          name: config
        - name: data
          persistentVolumeClaim:
            claimName: stalwart
        - name: certificate
          secret:
            secretName: "picklemustard-dev-tls-stalwart"
            items:
            - key: "tls.crt"
              path: "tls.cert"
        - name: key
          secret:
            secretName: "picklemustard-dev-tls-stalwart"
            items:
            - key: "tls.key"
              path: "tls.key"
