stalwart/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/metrics/prometheus"
  creationTimestamp: '2025-05-14T00:08:55Z'
  labels:
    app.kubernetes.io/instance: stalwart
    app.kubernetes.io/name: stalwart
    app.kubernetes.io/version: 0.12.1
  name: stalwart
  namespace: stalwart
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
    - name: imap
      port: 143
      protocol: TCP
      targetPort: 143
    - name: imaptls
      port: 993
      protocol: TCP
      targetPort: 993
    - name: pop3
      port: 110
      protocol: TCP
      targetPort: 110
    - name: pop3s
      port: 995
      protocol: TCP
      targetPort: 995
    - name: sieve
      port: 4190
      protocol: TCP
      targetPort: 4190
    - name: smtp
      port: 25
      protocol: TCP
      targetPort: 25
    - name: submission
      port: 10587
      protocol: TCP
      targetPort: 587
    - name: submissions
      port: 10465
      protocol: TCP
      targetPort: 465
  selector:
    app.kubernetes.io/instance: stalwart
    app.kubernetes.io/name: stalwart
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: stalwart-headless
  namespace: stalwart 
  labels:
    app.kubernetes.io/instance: stalwart
    app.kubernetes.io/name: stalwart 
spec:
  clusterIP: None # This is what makes the service "Headless"
  selector:
    app.kubernetes.io/name: stalwart 
    app.kubernetes.io/instance: stalwart 
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: smtp
      port: 25
      protocol: TCP
      targetPort: 25
    - name: submission
      port: 587
      targetPort: 587
      protocol: TCP
